--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Fix iOS Deployment Target
+        # This command forces the iOS target to 14.0 even if the files are missing
+        run: |
+          find . -name "project.pbxproj" -exec sed -i '' 's/IPHONEOS_DEPLOYMENT_TARGET = [0-9.]*/IPHONEOS_DEPLOYMENT_TARGET = 14.0/g' {} +
+
       - name: Build iOS (No Signing)
         run: flutter build ios --release --no-codesign
 
