Increase iOS deployment target to 15.0 for Firebase

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -20,9 +20,9 @@ jobs:
         run: flutter pub get
 
       - name: Fix iOS Deployment Target
-        # This command forces the iOS target to 14.0 even if the files are missing
+        # Changing this to 15.0 to satisfy firebase_core
         run: |
-          find . -name "project.pbxproj" -exec sed -i '' 's/IPHONEOS_DEPLOYMENT_TARGET = [0-9.]*/IPHONEOS_DEPLOYMENT_TARGET = 14.0/g' {} +
+          find . -name "project.pbxproj" -exec sed -i '' 's/IPHONEOS_DEPLOYMENT_TARGET = [0-9.]*/IPHONEOS_DEPLOYMENT_TARGET = 15.0/g' {} +
 
       - name: Build iOS (No Signing)
         run: flutter build ios --release --no-codesign
